Fix TemplateSyntaxError [load static]

--- a/swapi/templates/base.html
+++ b/swapi/templates/base.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+{% load static %}
+
 <html lang="en">
 <!-- Created by Paul Hallett - http://phalt.co Maintained by Juriy Bura - https://github.com/juriy -->
 <head>
