Fix template displaying

--- a/swapi/templates/index.html
+++ b/swapi/templates/index.html
@@ -2,40 +2,35 @@
 {% load humanize %}
 
 {% block mainbody %}
-      <div class="row">
-        <div class="col-lg-3">
-        </div>
+    <div class="row">
+        <div class="col-lg-3"></div>
         <div class="col-lg-6 center">
-          <p>All the Star Wars data you've ever wanted:</p>
-          <p><b>Planets, Spaceships, Vehicles, People, Films and Species</b></p>
-          <p>From all <b>SEVEN</b> Star Wars films</p>
-          <p><h4>Now with The Force Awakens data!</h4></p>
+            <p>All the Star Wars data you've ever wanted:</p>
+            <p><b>Planets, Spaceships, Vehicles, People, Films and Species</b></p>
+            <p>From all <b>SEVEN</b> Star Wars films</p>
+            <h4>Now with The Force Awakens data!</h4>
         </div>
-        <div class="col-lg-3">
-        </div>
+        <div class="col-lg-3"></div>
 
+    </div>
     <div class="row">
         <hr>
         <div class="col-sm-2 col-lg-2 col-md-2"></div>
-
         <div class="col-lg-8 col-md-8 col-sm-8">
             <h1 class="center">Try it now!</h1>
             <div class="input-group">
-
                 <span class="input-group-addon">https://swapi.dev/api/</span>
-                <label for="interactive" class="sr-only">Test API request</label>
+                <label for="interactive" class="sr-only">Try API</label>
                 <input id="interactive" type="text" class="form-control" placeholder="people/1/">
                 <span class="input-group-btn">
                     <button onClick="interactive_call();return false;" class="btn btn-primary">request</button>
                 </span>
             </div>
-
             <small>Need a hint? try
                 <a href="#" onClick="update('people/1/');return false;"><i>people/1/</i></a> or
                 <a href="#" onClick="update('planets/3/');return false;"><i>planets/3/</i></a> or
                 <a href="#" onClick="update('starships/9/');return false;"><i>starships/9/</i></a>
             </small>
-
             <p class="lead pad_top">Result:</p>
             <div class="well">
                 <pre id="interactive_output" class="pre-scrollable">
@@ -74,13 +69,10 @@
           </pre>
             </div>
         </div>
-
         <div class="col-sm-2 col-lg-2 col-md-2"></div>
     </div>
-
     <div class="row pad_bot">
         <div class="col-sm-1 col-lg-1 col-md-1"></div>
-
         <div class="col-sm-3 col-lg-3 col-md-3">
             <h4 class="center">What is this?</h4>
             <p>The Star Wars API, or "swapi" (Swah-pee) is the world's first quantified and programmatically-accessible
@@ -88,7 +80,6 @@
             <p>We've taken all the rich contextual stuff from the universe and formatted into something easier to
                 consume with software. Then we went and stuck an API on the front so you can access it all!</p>
         </div>
-
         <div class="col-sm-4 col-lg-4 col-md-4">
             <h4 class="center">How can I use it?</h4>
             <p>All the data is accessible through our HTTP web API. Consult our <a
@@ -97,17 +88,18 @@
                 favourite programming language, in a style that suits you.</p>
         </div>
         <div class="col-sm-3 col-lg-3 col-md-3">
-          <h4 class="center">What happened with old swapi.co?</h4>
-          <p>swapi.co is not supported and maintained anymode. But since so many projects and tutorials used it as their educational
-          playground, this is an "unofficial" branch</p>
-        <p>This project is open source and you can contribute <a href="https://github.com/Juriy/swapi">on GitHub</a>.</p>
+            <h4 class="center">What happened with old swapi.co?</h4>
+            <p>swapi.co is not supported and maintained anymode. But since so many projects and tutorials used it as
+                their educational
+                playground, this is an "unofficial" branch</p>
+            <p>This project is open source and you can contribute <a href="https://github.com/Juriy/swapi">on GitHub</a>.
+            </p>
         </div>
         <div class="col-sm-1 col-lg-1 col-md-1">
         </div>
     </div>
     <hr>
 {% endblock mainbody %}
-
 {% block scripts %}
     <script>
         function update(call) {
@@ -116,20 +108,20 @@
         }
 
         function interactive_call() {
-            var content = jQuery('#interactive').val()
-            if (content == '') {
+            let content = jQuery('#interactive').val()
+            if (content === '') {
                 content = 'people/1/';
             }
-            var call_url = 'api/' + content;
+            let call_url = 'api/' + content;
             jQuery.ajax({
                 dataType: 'json',
                 url: call_url,
                 context: document.body
             }).complete(function (data) {
-                if (data['status'] == 200) {
-                    var d = jQuery.parseJSON(data['responseText']);
+                if (data['status'] === 200) {
+                    let d = jQuery.parseJSON(data['responseText']);
                     jQuery('#interactive_output').text(JSON.stringify(d, null, '\t'));
-                } else if (data['status'] == 404) {
+                } else if (data['status'] === 404) {
                     jQuery('#interactive_output').text(data['status'] + ' ' + data['statusText']);
                 }
             });
