--- a/swapi/templates/base.html
+++ b/swapi/templates/base.html
@@ -10,83 +10,23 @@
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <link href="{% static '/css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static '/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static '/css/custom.css' %}" rel="stylesheet">
     <link rel="shortcut icon" href="{% static '/favicon.ico' %}">
-
-    <script src="//code.jquery.com/jquery-2.1.0.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163610532-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-
-        gtag('js', new Date());
-        gtag('config', 'UA-163610532-1');
-    </script>
 </head>
 <body>
-<nav class="navbar navbar-default" role="navigation">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <div class="navbar-brand" href="#"><a href="https://twitter.com/share" class="twitter-share-button"
-                                                  data-url="https://swapi.co" data-text="swapi.dev - the Star Wars API "
-                                                  data-via="juriy" data-related="juriy">Tweet</a>
-                <script>!function (d, s, id) {
-                    var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
-                    if (!d.getElementById(id)) {
-                        js = d.createElement(s);
-                        js.id = id;
-                        js.src = p + '://platform.twitter.com/widgets.js';
-                        fjs.parentNode.insertBefore(js, fjs);
-                    }
-                }(document, 'script', 'twitter-wjs');</script>
-            </div>
-        </div>
-        <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="{% url 'homepage' %}">Home</a></li>
-                <li><a href="{% url 'about' %}">About</a></li>
-                <li><a href="{% url 'documentation' %}">Documentation</a></li>
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" href="#">Swapi</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-<!-- Main content -->
-<div class="container-fluid" style="margin-top: 60px;">
-
-    <div class="row center yellow">
-        <div class="jumbotron">
-            <h1>SWAPI</h1>
-            <p class="lead">The Star Wars API</p>
-            <p class="lead"><a href="{% url 'about' %}">(what happened to swapi.co?)</a></p>
-        </div>
-    </div>
-
-    {% block mainbody %}{% endblock mainbody %}
-
-    {% block scripts %}{% endblock scripts %}
-
-    <div class="row">
-        <div class="col-lg-12 footer">
-            Created by Paul Hallett
-            Maintained by Juriy Bura &copy;<script
-                type="text/javascript">document.write(new Date().getFullYear());</script>
-            <span class="pull-right">
-            <a href="//twitter.com/juriy" class="twitter-follow-button" data-show-count="false"
-               data-show-screen-name="false" data-dnt="true">Follow me on twitter</a>
+        <div class="navbar-brand" href="{% url 'homepage' %}">
+            <a href="https://twitter.com/share" class="twitter-share-button"
+               data-url="https://swapi.co" data-text="swapi.dev - the Star Wars API "
+               data-via="juriy" data-related="juriy">Tweet</a>
             <script>!function (d, s, id) {
                 var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
                 if (!d.getElementById(id)) {
@@ -96,10 +36,77 @@
                     fjs.parentNode.insertBefore(js, fjs);
                 }
             }(document, 'script', 'twitter-wjs');</script>
-          <iframe src="//ghbtns.com/github-btn.html?user=juriy&type=follow"
-                  allowtransparency="false" frameborder="0" scrolling="0" width="132" height="20"></iframe></span></p>
+        </div>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a class="nav-link" href="{% url 'homepage' %}">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'documentation' %}">Documentation</a></li>
+            </ul>
         </div>
     </div>
+</nav>
+
+<!-- Main content -->
+<div class="container mt-5">
+
+    <div class="row text-center">
+        <div class="col-12">
+            <div class="jumbotron">
+                <h1 class="text-primary">SWAPI</h1>
+                <p class="lead text-primary">The Star Wars API</p>
+                <p class="lead"><a href="{% url 'about' %}">(what happened to swapi.co?)</a></p>
+            </div>
+        </div>
+    </div>
+
+    {% block mainbody %}{% endblock mainbody %}
+
+    {% block scripts %}{% endblock scripts %}
 </div>
+
+<footer class="py-3">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">Created by Paul Hallett Maintained by Juriy Bura &copy; 2020</div>
+            <div class="col-lg-6 text-lg-right">
+                <a href="//twitter.com/juriy" class="twitter-follow-button" data-show-count="false"
+                   data-show-screen-name="false" data-dnt="true">Follow me on twitter</a>
+                <script>!function (d, s, id) {
+                    var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
+                    if (!d.getElementById(id)) {
+                        js = d.createElement(s);
+                        js.id = id;
+                        js.src = p + '://platform.twitter.com/widgets.js';
+                        fjs.parentNode.insertBefore(js, fjs);
+                    }
+                }(document, 'script', 'twitter-wjs');</script>
+                <iframe src="//ghbtns.com/github-btn.html?user=juriy&type=follow"
+                        allowtransparency="false" frameborder="0" scrolling="0" width="132" height="20"></iframe>
+            </div>
+        </div>
+    </div>
+</footer>
+
+<!-- JS, Popper.js, and jQuery -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.4.4/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163610532-1"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+
+    gtag('js', new Date());
+    gtag('config', 'UA-163610532-1');
+</script>
 </body>
 </html>
