--- a/swapi/templates/index.html
+++ b/swapi/templates/index.html
@@ -2,38 +2,44 @@
 {% load humanize %}
 
 {% block mainbody %}
+
     <div class="row">
-        <div class="col-lg-3"></div>
-        <div class="col-lg-6 center">
+        <div class="col-12 text-center">
             <p>All the Star Wars data you've ever wanted:</p>
             <p><b>Planets, Spaceships, Vehicles, People, Films and Species</b></p>
             <p>From all <b>SEVEN</b> Star Wars films</p>
             <h4>Now with The Force Awakens data!</h4>
         </div>
-        <div class="col-lg-3"></div>
-
     </div>
+
+    <hr>
+
     <div class="row">
-        <hr>
-        <div class="col-sm-2 col-lg-2 col-md-2"></div>
-        <div class="col-lg-8 col-md-8 col-sm-8">
-            <h1 class="center">Try it now!</h1>
-            <div class="input-group">
-                <span class="input-group-addon">{{ request.build_absolute_uri }}api/</span>
-                <label for="interactive" class="sr-only">Try API</label>
+        <div class="col-12">
+            <label for="interactive" class="text-center w-100 display-4 mb-3">Try it now!</label>
+            <div class="input-group mb-2">
+                <div class="input-group-prepend">
+                    <span class="input-group-text">{{ request.build_absolute_uri }}api/</span>
+                </div>
                 <input id="interactive" type="text" class="form-control" placeholder="people/1/">
-                <span class="input-group-btn">
-                    <button onClick="interactive_call();return false;" class="btn btn-primary">request</button>
-                </span>
+                <div class="input-group-append">
+                    <button onClick="interactive_call();return false;"
+                            id="request-button" class="btn btn-primary">
+                        Request
+                    </button>
+                </div>
             </div>
-            <small>Need a hint? try
+            <small class="form-text text-muted mb-4">
+                Need a hint? try
                 <a href="#" onClick="update('people/1/');return false;"><i>people/1/</i></a> or
                 <a href="#" onClick="update('planets/3/');return false;"><i>planets/3/</i></a> or
                 <a href="#" onClick="update('starships/9/');return false;"><i>starships/9/</i></a>
             </small>
-            <p class="lead pad_top">Result:</p>
+
+            <h3>Result:</h3>
             <div class="well">
-                <pre id="interactive_output" class="pre-scrollable">
+               <pre>
+                    <code id="interactive_output" class="p-4 card bg-light text-dark">
 {
 	"name": "Luke Skywalker",
 	"height": "172",
@@ -66,36 +72,33 @@
 	"edited": "2014-12-20T21:17:56.891000Z",
 	"url": "https://swapi.dev/api/people/1/"
 }
-          </pre>
+          </code>
+               </pre>
             </div>
         </div>
-        <div class="col-sm-2 col-lg-2 col-md-2"></div>
     </div>
-    <div class="row pad_bot">
-        <div class="col-sm-1 col-lg-1 col-md-1"></div>
-        <div class="col-sm-3 col-lg-3 col-md-3">
-            <h4 class="center">What is this?</h4>
+    <div class="row py-5">
+        <div class="col-md-4">
+            <h4 class="text-center">What is this?</h4>
             <p>The Star Wars API, or "swapi" (Swah-pee) is the world's first quantified and programmatically-accessible
                 data source for all the data from the Star Wars canon universe!</p>
             <p>We've taken all the rich contextual stuff from the universe and formatted into something easier to
                 consume with software. Then we went and stuck an API on the front so you can access it all!</p>
         </div>
-        <div class="col-sm-4 col-lg-4 col-md-4">
-            <h4 class="center">How can I use it?</h4>
+        <div class="col-md-4">
+            <h4 class="text-center">How can I use it?</h4>
             <p>All the data is accessible through our HTTP web API. Consult our <a
                     href="{% url 'documentation' %}">documentation</a> if you'd like to get started.</p>
             <p>Helper libraries for popular programming languages are also provided so you can consume swapi in your
                 favourite programming language, in a style that suits you.</p>
         </div>
-        <div class="col-sm-3 col-lg-3 col-md-3">
-            <h4 class="center">What happened with old swapi.co?</h4>
+        <div class="col-md-4">
+            <h4 class="text-center">What happened with old swapi.co?</h4>
             <p>swapi.co is not supported and maintained anymode. But since so many projects and tutorials used it as
                 their educational
                 playground, this is an "unofficial" branch</p>
             <p>This project is open source and you can contribute <a href="https://github.com/Juriy/swapi">on GitHub</a>.
             </p>
-        </div>
-        <div class="col-sm-1 col-lg-1 col-md-1">
         </div>
     </div>
     <hr>
@@ -109,22 +112,23 @@
 
         function interactive_call() {
             let content = jQuery('#interactive').val()
-            if (content === '') {
-                content = 'people/1/';
-            }
+            content = content || 'people/1/';
             let call_url = 'api/' + content;
-            jQuery.ajax({
+
+            jQuery.ajax(call_url, {
                 dataType: 'json',
-                url: call_url,
                 context: document.body
-            }).complete(function (data) {
-                if (data['status'] === 200) {
-                    let d = jQuery.parseJSON(data['responseText']);
-                    jQuery('#interactive_output').text(JSON.stringify(d, null, '\t'));
-                } else if (data['status'] === 404) {
-                    jQuery('#interactive_output').text(data['status'] + ' ' + data['statusText']);
-                }
+            }).done(function (data) {
+                jQuery('#interactive_output').text(JSON.stringify(data, null, '\t'));
+            }).fail(function (data) {
+                jQuery('#interactive_output').text(data['status'] + ' ' + data['statusText']);
             });
         }
     </script>
+    <style>
+        .spinner-border {
+            width: 1rem;
+            height: 1rem;
+        }
+    </style>
 {% endblock scripts %}
