Fixed code displaying on main page

--- a/swapi/templates/index.html
+++ b/swapi/templates/index.html
@@ -38,7 +38,7 @@
 
             <h3>Result:</h3>
             <div class="well">
-               <pre>
+               <pre class="p-0 bg-transparent">
                     <code id="interactive_output" class="p-4 card bg-light text-dark">
 {
 	"name": "Luke Skywalker",
