--- a/swapi/templates/index.html
+++ b/swapi/templates/index.html
@@ -16,7 +16,7 @@
 
     <div class="row">
         <div class="col-12">
-            <label for="interactive" class="text-center w-100 display-4 mb-3">Try it now!</label>
+            <label for="interactive" class="text-center w-100 display-4 mb-3 text-primary">Try it now!</label>
             <div class="input-group mb-2">
                 <div class="input-group-prepend">
                     <span class="input-group-text">{{ request.build_absolute_uri }}api/</span>
